{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 165,
  "lineage": "8f6f984d-e895-a6c4-69ec-a7ed1052488c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "test_web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:618388817220:loadbalancer/test-web-elb",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "test-web-elb-1554612640.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "test-web-elb",
            "idle_timeout": 400,
            "instances": [
              "i-03d31860a80e3b91e",
              "i-08874e26a99bd124a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "test-web-elb",
            "security_groups": [
              "sg-0baf3c6314d41ee24"
            ],
            "source_security_group": "618388817220/elb_http",
            "source_security_group_id": "sg-0baf3c6314d41ee24",
            "subnets": [
              "subnet-00c464234f6ccc553",
              "subnet-036d8ebb1c71b597e"
            ],
            "tags": {
              "Name": "test-web-elb"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.ec2_in_2a",
            "aws_instance.ec2_in_2b",
            "aws_security_group.allow_http",
            "aws_security_group.elb_http",
            "aws_subnet.pub_subnet_2a",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_in_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80a462ede03e653",
            "arn": "arn:aws:ec2:eu-west-2:618388817220:instance/i-08874e26a99bd124a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08874e26a99bd124a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06460a60aeb9b648b",
            "private_dns": "ip-10-0-0-72.eu-west-2.compute.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-3-10-232-132.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.232.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9d4d316586470e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036d8ebb1c71b597e",
            "tags": {
              "Name": "Instance in eu-west-2a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a55407e2c8bb9694"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.pub_subnet_2a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_in_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80a462ede03e653",
            "arn": "arn:aws:ec2:eu-west-2:618388817220:instance/i-03d31860a80e3b91e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d31860a80e3b91e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db4a01c3bc2a3ae1",
            "private_dns": "ip-10-0-1-31.eu-west-2.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-52-56-84-63.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.84.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06753f94d0cf182b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c464234f6ccc553",
            "tags": {
              "Name": "Instance in eu-west-2a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a55407e2c8bb9694"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:internet-gateway/igw-0f178f0e49b3a0eaa",
            "id": "igw-0f178f0e49b3a0eaa",
            "owner_id": "618388817220",
            "tags": {
              "Name": "Test VPC Internet Gateway"
            },
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b50fcd06c9c67f18",
            "owner_id": "618388817220",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f178f0e49b3a0eaa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnets rt for Test VPC"
            },
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_vpc_2a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfb425d85ab4eb00",
            "route_table_id": "rtb-0b50fcd06c9c67f18",
            "subnet_id": "subnet-036d8ebb1c71b597e"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_route_table.test_vpc_public",
            "aws_subnet.pub_subnet_2a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_vpc_2b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fba845dc7a2fdd37",
            "route_table_id": "rtb-0b50fcd06c9c67f18",
            "subnet_id": "subnet-00c464234f6ccc553"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_route_table.test_vpc_public",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:security-group/sg-0a55407e2c8bb9694",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a55407e2c8bb9694",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "618388817220",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:security-group/sg-0baf3c6314d41ee24",
            "description": "Dynamic sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baf3c6314d41ee24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_http",
            "name_prefix": "",
            "owner_id": "618388817220",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:subnet/subnet-036d8ebb1c71b597e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-036d8ebb1c71b597e",
            "map_public_ip_on_launch": false,
            "owner_id": "618388817220",
            "tags": {
              "Name": "Public subnet eu-west-2a"
            },
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:subnet/subnet-00c464234f6ccc553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00c464234f6ccc553",
            "map_public_ip_on_launch": false,
            "owner_id": "618388817220",
            "tags": {
              "Name": "Public subnet eu-west-2b"
            },
            "vpc_id": "vpc-0af6d1e9c9dc4d52a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:vpc/vpc-0af6d1e9c9dc4d52a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fc662bc5f740a2f",
            "default_route_table_id": "rtb-00d09794793210c30",
            "default_security_group_id": "sg-094695d48d740ff5b",
            "dhcp_options_id": "dopt-bfe7b6d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0af6d1e9c9dc4d52a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d09794793210c30",
            "owner_id": "618388817220",
            "tags": {
              "Name": "Test vpc"
            }
          }
        }
      ]
    }
  ]
}